[package]
name = "hyper_client"
version = "0.1.0"
authors = ["Gabor Bekes <gabor.bekes@oneidentity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
hyper-timeout = "0.4.1"